--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
-  }
+  },
+  "name": "speclab-aux",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/vermyapre/speclab-aux.git",
+  "author": "vermyapre <samuel.nieves.work@gmail.com>",
+  "license": "MIT"
 }
